--- a/public/style.css
+++ b/public/style.css
@@ -167,7 +167,8 @@ header {
      font-weight: normal;
  }
 
- button[type="submit"]{
+ button[type="submit"], 
+ a.button{
      padding: 8px 32px;
      background-color: var(--primary-color);
      color: white;
@@ -175,4 +176,16 @@ header {
      margin-top: 32px;
      width: 100%;
      font-size: 16px;
+ }
+
+ a.button{
+     display: block;
+     box-sizing: border-box;
+     text-align: center;
+     text-decoration: none;
+ }
+
+ #form-delete button[type="submit"] {
+     margin-top: 8px;
+     background-color: lightcoral;
  }
